@@ -1,3 +1,7 @@
+2002-01-26  Junichi Uekawa  <dancer@debian.org>
+
+	* dsh.c (main): error check asprintf.
+
 2002-01-25  Junichi Uekawa  <dancer@debian.org>
 
 	* ChangeLog: resume using the ChangeLog file.
